fix(weekly): add overflow

--- a/src/app/weekly-view/weekly-view.component.scss
+++ b/src/app/weekly-view/weekly-view.component.scss
@@ -3,6 +3,7 @@
   flex-direction: row;
   width: 100%;
   flex: 1;
+  overflow: auto;
 }
 
 .weekly-view__column {
